Revision history for Music-ToRoman

{{$NEXT}}

0.0200 2018-11-04 21:06:31
    - Allowed chords with notes in the bass (e.g. "Cm9/G").

0.0101 2018-11-04 20:27:14
    - Improved documentation.
    - Added a test!

0.0100 2018-11-04 20:07:56
    - Minted by Dist::Zilla.
    - Ported from eg scripts in Music::BachChoralHarmony.